fix(Login Mobile View): Register text unreadable
Add flex display to center login container to show text better

--- a/src/container/landingPage/landingPage.css
+++ b/src/container/landingPage/landingPage.css
@@ -40,6 +40,7 @@
 @media screen and (max-width: 900px) {
     .containerLandingPage{
         all: unset;
+        display: flex;
     }
     .containerLandingPage {
         /* border: solid red; */
