--- a/src/container/landingPage/login/Login.css
+++ b/src/container/landingPage/login/Login.css
@@ -107,7 +107,7 @@
 @media screen and (max-width: 900px) {
     .containerLogin, .containerRegister {
         width: auto;
-        margin: 60px auto;
+        margin: auto;
     }
 
     .formLogin {
